# time-verification

./: .gitignore  Ast.ml  Commandline.ml  Easycrypt.ml  Main.ml  Printer.ml  README.md  Semantics.ml  Time.ml  VCGen.ml  dune  lexer.mll  output.ec  parser.mly
Examples/: assign.cs  assign2.cs  binary-counter-input.txt  binary-counter.cs  binary-search-input.txt  binarysearch.cs  division.cs  division2.cs  example.ml  insertion-sort-input.txt  insertionsort.cs  insertionsort.ec  range.cs  selectionsort.cs
